feat: change "booking" to "appointment"
