# docs/swagger.json
@@ -21,9 +21,9 @@
     "host": "localhost:9512",
     "basePath": "/",
     "paths": {
-        "/bookings": {
+        "/appointments": {
             "get": {
-                "description": "Get list of all bookings",
+                "description": "Get list of all appointments",
                 "consumes": [
                     "application/json"
                 ],
@@ -31,16 +31,16 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bookings"
+                    "appointments"
                 ],
-                "summary": "Get all bookings",
+                "summary": "Get all appointments",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/booking.Booking"
+                                "$ref": "#/definitions/appointment.Appointment"
                             }
                         }
                     },
@@ -56,7 +56,7 @@
                 }
             },
             "post": {
-                "description": "Create a new booking",
+                "description": "Create a new appointment",
                 "consumes": [
                     "application/json"
                 ],
@@ -64,17 +64,17 @@
                     "application/json"
                 ],
                 "tags": [
-                    "bookings"
+                    "appointments"
                 ],
-                "summary": "Create a new booking",
+                "summary": "Create a new appointment",
                 "parameters": [
                     {
-                        "description": "Booking",
+                        "description": "Appointment",
                         "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/booking.Booking"
+                            "$ref": "#/definitions/appointment.Appointment"
                         }
                     }
                 ],
@@ -82,7 +82,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/booking.Booking"
+                            "$ref": "#/definitions/appointment.Appointment"
                         }
                     },
                     "400": {
@@ -362,7 +362,7 @@
         }
     },
     "definitions": {
-        "booking.Booking": {
+        "appointment.Appointment": {
             "type": "object",
             "properties": {
                 "appointment_at": {
