# internal/appointment/validator.go
@@ -1,4 +1,4 @@
-package booking
+package appointment
 
 type Validator struct{}
 
@@ -6,17 +6,17 @@ func NewValidator() *Validator {
 	return &Validator{}
 }
 
-func (v *Validator) ValidateBooking(booking *Booking) error {
-	// if booking.ServiceName == "" {
+func (v *Validator) ValidateAppointment(pppointment *Appointment) error {
+	// if Appointment.ServiceName == "" {
 	// 	return errors.New("service name is required")
 	// }
-	// if booking.AppointmentAt.IsZero() {
+	// if Appointment.AppointmentAt.IsZero() {
 	// 	return errors.New("appointment date and time is required")
 	// }
-	// if booking.AppointmentAt.Before(time.Now()) {
+	// if Appointment.AppointmentAt.Before(time.Now()) {
 	// 	return errors.New("appointment time must be in the future")
 	// }
-	// if booking.Price < 0 {
+	// if Appointment.Price < 0 {
 	// 	return errors.New("price cannot be negative")
 	// }
 	return nil
